[package]
name = "rust-knowledge"
version = "0.1.0"
authors = ["Ferenc Szujo <loopilla@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "*"
rand = "*"

[[example]]
name = "ownership"

[[example]]
name = "structs"

[[example]]
name = "enums"

[[example]]
name = "poly"

[[example]]
name = "vector2"

[[example]]
name = "fibonacci"

[[example]]
name = "generics"
